[package]
name = "rust2pickle"
version = "0.0.2"
authors = ["Yijun Yu <yijun.yu@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/yijunyu/rust2pickle"
homepage = "https://github.com/yijunyu/rust2pickle"
documentation = "https://docs.rs/rust2pickle"
keywords = ["serde", "serialization", "syn", "pickle"]
categories = ["development-tools::procedural-macro-helpers", "encoding"]
readme = "README.md"
description = """
Library to serialize and deserialize Syn syntax trees into Pickle format.
"""

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
syn-serde = "0.2"
structopt = "0.3.17"
serde-pickle = "0.6.1"
